[style] [fix] pattern swatch alignment issue

--- a/_includes/patterns.css
+++ b/_includes/patterns.css
@@ -13,7 +13,7 @@
   overflow: hidden;
 }
 
-.swatches li + li {
+.swatches li {
   margin-top: 1em;
 }
 
